--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,12 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ProyectoCargas.jar
+dist.jar=${dist.dir}/ProyectoCargas_0.6.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.xstream-1.4.10.jar=C:\\Users\\Daniel\\Downloads\\xstream-1.4.10.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.xstream-1.4.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
