--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.xstream-1.4.10.jar=C:\\Users\\gergg\\Desktop\\xstream-1.4.10.jar
 user.properties.file=C:\\Users\\gergg\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
